tests/fixtures/invalid/pow_bool_bool_bytes.py
# Cannot call pow() with Bool, Bool, Bytes
x = pow(True, True, b"hello")
